# advent-of-code-2022

./: build.sbt
python/: .gitignore  pyproject.toml
python/aoc_2022/day1/: solution_a.py  solution_b.py
python/aoc_2022/day2/: solution_a.py  solution_b.py
python/aoc_2022/day6/: solution_a.py  solution_b.py
scala/src/main/scala/day1/: SolutionA.scala
scala/src/main/scala/day10/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day11/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day12/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day13/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day14/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day15/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day2/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day3/: SolutionA.scala
scala/src/main/scala/day4/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day5/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day6/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day7/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day8/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/day9/: SolutionA.scala  SolutionB.scala
scala/src/main/scala/util/dijkstra/: Dijkstra.scala  DijkstraImmutable.scala  Graph.scala  SimpleGraph.scala  Util.scala
src/main/scala/day1/: SolutionB.scala
src/main/scala/day2/: SolutionB.scala
src/main/scala/day3/: SolutionA.scala  SolutionB.scala
src/main/scala/day4/: SolutionB.scala
