[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["Jelmer Kuperus <jelmer@miro.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
